# cell-to-pack

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/architecture/: architecture.md
docs/plan/: plan.md
scripts/: run_modbus_plc_sim.py
src/cell_to_pack/: __init__.py  __main__.py  cli.py  config.py  orchestrator.py  schemas.py
src/cell_to_pack/edge/: __init__.py  fusion.py  simulator.py
src/cell_to_pack/factory/: __init__.py  mes.py  plc.py
src/cell_to_pack/inference/: __init__.py  server.py  vlm.py
tests/: test_api.py  test_fusion.py  test_vlm.py
